--- a/views/index.html
+++ b/views/index.html
@@ -5,10 +5,11 @@
     </p>
 
     <hr>
-    <img class="img-responsive" src="/v1/image?height=150&width=400">
+    <img class="img-responsive" src="/500/150">
     <br>
-    <code>https://random.responsiveimages.io/v1/image?height=150&width=400</code>
+    <code>&lt;img src="https://random.responsiveimages.io/500/150"&gt;</code>
     <hr>
+
 
     <p>
         Designed to work alongside <a href="https://responsiveimages.io/">responsiveimages.io</a><br>
