--- a/views/docs.html
+++ b/views/docs.html
@@ -54,7 +54,7 @@
 
 <br><hr><br>
 
-<h3>GET /{width}/{height}</h3>
+<h3>GET /<i>{width}</i>/<i>{height}</i></h3>
 <p>Short-hand endpoint for grabbing an image with a given width and height.</p>
 
 <h4>Examples</h4>
