--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">    
     <style type="text/css">
       body {
         padding-top: 5rem;
+      }
+      .navbar {
+        background-color: #373A3C !important;
       }
       .main-body {
         padding: 3rem 1.5rem;
@@ -17,9 +20,7 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-      <a class="navbar-brand" href="/">Random Image API</a>
-    </nav>
+    <nav class="navbar navbar-inverse fixed-top"><a class="navbar-brand" href="/">Random Image API</a></nav>
     <div class="container">{{{body}}}</div>
   </body>
 </html>
