feat(providers): Adding custom-v1 provider and appropriate JSON schemas.

--- a/views/docs.html
+++ b/views/docs.html
@@ -45,6 +45,18 @@
     </p></td>
   </tr>
   <tr>
+    <th scope="row"><code>provider</code></th>
+    <td><p>
+        Select an image provider:
+        <dl>
+            <dt>unsplash</dt>
+            <dd>The current default. Queries the Unsplash API for random images.</dd>
+            <dt>custom-v1:<pre>[ABSOLUTE-URL]</pre></dt>
+            <dd><strong>EXPERIMENTAL!</strong> Allows parsing a custom Image Pool, adhering to v1 of <a href="/schema/custom-v1.json">this JSON schema</a>.</dd>
+        </dl>
+    </p></td>
+  </tr>
+  <tr>
     <th scope="row"><code>category</code></th>
     <td><p>
         Category of the image to be returned. Categories TBC.
