feat: Read origin dynamically

--- a/views/docs.html
+++ b/views/docs.html
@@ -7,8 +7,8 @@
 
 <h4>Examples</h4>
 <ul>
-  <li><code>https://random.responsiveimages.io/v1/image?width=500&height=150</code></li>
-  <li><code>https://random.responsiveimages.io/v1/image?width=500&height=150&category=buildings&format=json</code></li>
+  <li><code>{{ origin }}/v1/image?width=500&height=150</code></li>
+  <li><code>{{ origin }}/v1/image?width=500&height=150&category=buildings&format=json</code></li>
 </ul>
 
 <h4>Query Parameters</h4>
@@ -71,7 +71,7 @@
 
 <h4>Examples</h4>
 <ul>
-  <li><code>https://random.responsiveimages.io/500/150</code></li>
+  <li><code>{{ origin }}/500/150</code></li>
 </ul>
 
 <h4>Parameters</h4>
