--- a/views/index.html
+++ b/views/index.html
@@ -7,11 +7,11 @@
     <hr>
     <img class="img-responsive" src="/500/150">
     <br>
-    <code>&lt;img src="https://random.responsiveimages.io/500/150"&gt;</code>
+    <code>&lt;img src="{{ origin }}/500/150"&gt;</code>
     <hr>
 
     <p>
-        Designed to work alongside <a href="https://responsiveimages.io/">responsiveimages.io</a><br>
+        Designed to work alongside <a href="https://imagecdn.app/">imagecdn.app</a><br>
         Read the documentation <a href="/v1/docs">here</a>.
     </p>
 </div>
