--- a/views/index.html
+++ b/views/index.html
@@ -1,17 +1,16 @@
 <div class="main-body">
     <h1>Random Image API</h1>
-    <p class="lead">
-        A simple API for serving random images.<br />
-    </p>
+    <p class="lead">A simple API for serving random images.<br /></p>
 
-    <hr>
-    <img class="img-responsive" src="/500/150">
-    <br>
+    <hr />
+    <img class="img-responsive" src="/500/150" />
+    <br />
     <code>&lt;img src="{{ origin }}/500/150"&gt;</code>
-    <hr>
+    <hr />
 
     <p>
-        Designed to work alongside <a href="https://imagecdn.app/">imagecdn.app</a><br>
+        Designed to work alongside
+        <a href="https://imagecdn.app/">imagecdn.app</a><br />
         Read the documentation <a href="/v1/docs">here</a>.
     </p>
 </div>
