feat(docs): Add deprecation notice partial 'just in case'

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -1,26 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">    
-    <style type="text/css">
-      body {
-        padding-top: 5rem;
-      }
-      .navbar {
-        background-color: #373A3C !important;
-      }
-      .main-body {
-        padding: 3rem 1.5rem;
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse fixed-top"><a class="navbar-brand" href="/">Random Image API</a></nav>
-    <div class="container">{{{ body }}}</div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
+        <title>{{ title }}</title>
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+            integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+            crossorigin="anonymous"
+        />
+        <style type="text/css">
+            body {
+                padding-top: 5rem;
+            }
+            .navbar {
+                background-color: #373a3c !important;
+            }
+            .main-body {
+                padding: 3rem 1.5rem;
+                text-align: center;
+            }
+        </style>
+    </head>
+    <body>
+        <nav class="navbar navbar-inverse fixed-top">
+            <a class="navbar-brand" href="/">Random Image API</a>
+        </nav>
+        <div class="container">
+            {{#if deprecation_date }} {{> deprecation-notice
+            date=deprecation_date }} {{/if}} {{{ body }}}
+        </div>
+    </body>
 </html>
